Added more class projects to my portal

--- a/index.html
+++ b/index.html
@@ -13,6 +13,9 @@
      <h1>Oliver Warlick</h1>
         <nav class="topnav" id="myTopnav">
             <a href="index.html" class="active">Home</a>
+            <a href="https://mroliverw.github.io/time-of-day/" target="_blank">Time of Day Project</a>
+            <a href="https://mroliverw.github.io/Positioning/" target="_blank">Positioning  Project</a>
+            <a href="https://mroliverw.github.io/selectors/" target="_blank">Selectors Project</a>
             <a href="https://mroliverw.github.io/explore-oregon/" target="_blank">Explore Oregon Project</a>
             <a href="https://mroliverw.github.io/stylin-with-css/" target="_blank">Stylin With CSS Project</a>
             <a href="https://github.com/MrOliverW" target="_blank">GitHub</a>
