--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
      <h1>Oliver Warlick</h1>
         <nav class="topnav" id="myTopnav">
             <a href="index.html" class="active">Home</a>
+            <a href="https://mroliverw.github.io/dom-play/" target="_blank">DOM Play Project</a>
             <a href="https://mroliverw.github.io/form-processing/" target="_blank">Form Processing Project</a>
             <a href="https://mroliverw.github.io/creatures/" target="_blank">Creatures Project</a>
             <a href="https://mroliverw.github.io/daily-grind/" target="_blank">Daily Grind Project</a>
