--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
    <main class="wrapper">
         <picture class="profile">
             <source media="(min-width: 1200px)" srcset="images/desktop.jpg">
-            <source media="(min-width: 501px)" srcset="images/tablet.jpg">
+            <source media="(min-width: 501px)" srcset="images/Rock Climbing.png">
             <img src="images/phone.jpg" alt="That's me!">
         </picture>   
        <h2 class="subheader">About Me</h2>
