--- a/index.html
+++ b/index.html
@@ -13,15 +13,14 @@
      <h1>Oliver Warlick</h1>
         <nav class="topnav" id="myTopnav">
             <a href="index.html" class="active">Home</a>
-            <a href="https://mroliverw.github.io/dom-play/" target="_blank">DOM Play Project</a>
+            <a href="https://mroliverw.github.io/daily-grind/" target="_blank">Daily Grind Project</a>
+            <a href="https://mroliverw.github.io/dom-manipulation/" target="_blank">DOM Manipulation Project</a>
             <a href="https://mroliverw.github.io/form-processing/" target="_blank">Form Processing Project</a>
             <a href="https://mroliverw.github.io/creatures/" target="_blank">Creatures Project</a>
-            <a href="https://mroliverw.github.io/daily-grind/" target="_blank">Daily Grind Project</a>
             <a href="https://mroliverw.github.io/time-of-day/" target="_blank">Time of Day Project</a>
             <a href="https://mroliverw.github.io/Positioning/" target="_blank">Positioning  Project</a>
             <a href="https://mroliverw.github.io/selectors/" target="_blank">Selectors Project</a>
             <a href="https://mroliverw.github.io/explore-oregon/" target="_blank">Explore Oregon Project</a>
-            <a href="https://mroliverw.github.io/stylin-with-css/" target="_blank">Stylin With CSS Project</a>
             <a href="https://github.com/MrOliverW" target="_blank">GitHub</a>
             <a href="https://www.linkedin.com/in/oliverwarlick/" target="_blank">LinkedIn</a>
             <a href="javascript:void(0);" class="icon" onclick="myFunction()">&#9776;</a>
