Adding resume and updating bio

--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
             <a href="https://mroliverw.github.io/explore-oregon/" target="_blank">Explore Oregon Project</a>
             <a href="https://github.com/MrOliverW" target="_blank">GitHub</a>
             <a href="https://www.linkedin.com/in/oliverwarlick/" target="_blank">LinkedIn</a>
+            <a href="C:\Users\olive\Documents\GitHub\portal\docs\Oliver Warlick Resume.docx" target="_blank">Resume</a>
             <a href="javascript:void(0);" class="icon" onclick="myFunction()">&#9776;</a>
         </nav>
      </header>
