--- a/index.html
+++ b/index.html
@@ -22,8 +22,9 @@
             <a href="https://mroliverw.github.io/selectors/" target="_blank">Selectors Project</a>
             <a href="https://mroliverw.github.io/explore-oregon/" target="_blank">Explore Oregon Project</a>
             <a href="https://github.com/MrOliverW" target="_blank">GitHub</a>
-            <a href="https://www.linkedin.com/in/oliverwarlick/" target="_blank">LinkedIn</a>
+            <a href="https://www.linkedin.com/in/oliverwarlick/" target="_blank">LinkedIn & Contact Information</a>
             <a href="docs/Oliver Warlick Resume.docx" target="_blank">Resume</a>
+            <a href="https://docs.google.com/document/d/1BEw8tKNyBlj72AwCsDIFYCM_SC9vtuU7PmMSYSTDKgA/edit?usp=sharing" target="_blank">Case Study</a>
             <a href="javascript:void(0);" class="icon" onclick="myFunction()">&#9776;</a>
         </nav>
      </header>
